src/assets/css/style.css
/* ... */
.image-mask:before {
	content: '';
	display: inline-block;
	height: 100%;
	vertical-align: middle;
}

.image-mask-content {
	display: inline-block;
	vertical-align: middle;
}

.image-mask-content i{
	width: 42px;
	height: 42px;
	border: 1px solid #18cfab;
	border-radius: 50%;
	color: #18cfab;
	background-color: #ffffff;
	font-size: 16px;
	line-height: 40px;
	margin: 0 6px;
}
.image-mask-content i:hover{
	background-color: #18cfab;
	color: #ffffff;
	transition:all 0.5s;
}

.image-mask-title {
	margin: 0;
	padding: 20px 0 5px 0;
	font-size: 18px;
	font-weight: bold;
	color: #18cfab;
	text-transform: uppercase;
}

.image-mask-category {
	margin: 0;
	font-size: 14px;
	font-weight: 300;
	color: #717171;
}

@media all and (min-width: 687px) {

	.work-images-item {
		width: 50%;
	}
}

@media all and (min-width: 992px) {

	.work-images-item {
		width: 33.333%;
	}
}

@media all and (min-width: 1200px) {

	.work-images-item {
		width: 25%;
	}
}

/* Team section*/

.team-member {
	width: 100%;
	margin: 20px 0;
	text-align: left;
}

.team-member-photo {
	position: relative;
}

.team-member-photo > img {
	width: 100%;
	/* Removes image bottom "margin"*/
	vertical-align: middle;
}

.photo-mask {
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	background-color: rgba(24, 207, 171, 0.2);
	opacity: 0;
}

.circle {
	position: relative;
	top: 50%;
	border: 2px solid #18cfab;
	border-radius: 50%;
	width: 80px;
	height: 80px;
	margin: -40px auto 0 auto;
	cursor: pointer;
}

.photo-mask i {
	color: #18cfab;
	background-color: #fff;
	width: 70px;
	height: 70px;
	line-height: 72px;
	text-align: center;
	border-radius: 50%;
	margin-top: 3px;
	margin-left: 3px;
}

.team-member-title {
	width: 100%;
	background-color: #2e4a5b;
}

.team-member-name {
	padding: 10px 0 5px 15px;
	margin: 0;
	font-size: 16px;
	font-weight: bold;
	color: #ffffff;
}

.team-member-position {
	padding: 0 0 10px 15px;
	margin: 0;
	font-size: 13px;
	font-weight: 300;
	color: #18cfab;
}

.team-member-links {
	display: flex;
}

.team-member-links a {
	display: inline-block;
	border-top: 1px solid #ffffff;
	border-right: 1px solid #ffffff;
	flex: 1;
}

.team-member-links a:last-child {
	border-right: 0;
}

.team-member-links i {
	width: 100%;
	height: 65px;
	background-color: #2e4a5b;
	text-align: center;
	line-height: 65px;
	color: #ffffff;
}

.team-member:hover .team-member-title, .team-member:hover .team-member-links i {
	background-color: #18cfab;
	transition:all 0.5s;
}

.team-member:hover .team-member-position {
	color: #2e4a5b;
	transition:all 0.5s;
}

.team-member:hover .team-member-photo > img {
	background-color: rgba(24, 207, 171, 0.5);
}

.team-member:hover .photo-mask {
	opacity: 1;
	transition:all 0.5s;
}


.team-facts {
	width: 100%;
	margin: 0;
	padding: 0;
}

.team-facts-item {
	display: inline-block;
	float: left;
	width: 100%;
	text-align: center;
	border-top: 7px solid #25333c;
	background-color: #18cfab;
	color: #25333c;
}

.team-facts-item:nth-child(odd) {
	border-top: 7px solid #18cfab;
	background-color: #25333c;
	color: #18cfab;
}

.fact-circle {
	border: 2px solid #25333c;
	border-radius: 50%;
	width: 165px;
	height: 165px;
	margin: 50px auto 0;
}

.team-facts-item:nth-child(odd) .fact-circle {
	border: 2px solid #18cfab;
}

.fact-circle i {
	color: #ffffff;
	background-color: #25333c;
	width: 100px;
	height: 100px;
	line-height: 100px;
	text-align: center;
	border-radius: 50%;
	margin-top: 30px;
}

.team-facts-item:nth-child(odd) .fact-circle i {
	background-color: #18cfab;
}

.fact-number {
	font-size: 36px;
	font-weight: 400;
	color: #ffffff;
	margin: 20px auto 5px auto;
}

.fact-title {
	font-size: 18px;
	font-weight: 300;
	color: #25333c;
	margin: 0 auto 30px auto;
}

.team-facts-item:nth-child(odd) .fact-title {
	color: #18cfab;
}

@media all and (min-width: 687px) {
	.team-facts-item {
		width: 50%;
	}
}

@media all and (min-width: 992px) {
	.team-facts-item {
		width: 25%;
	}
}


/* News section */

.news-container {
	margin-bottom: 30px;
	/*cursor: pointer;*/
}

.news-photo-container {
	position: relative;
}

.news-photo-container img {
	width: 100%;
	/* Removes image bottom "margin"*/
	vertical-align: middle;
}

.news-date {
	display: inline-block;
	position: absolute;
	width: 60px;
	height: 60px;
	top: 0;
	right: 0;
	color: #ffffff;
	background-color: #203e38;
	padding: 10px;
	text-align: center;
}

.news-title {
	padding: 20px 0;
	margin: 0;
	border: 1px solid #c2c2c2;
	font-size: 18px;
	font-weight: bold;
	color: #717171;
	background-color: #f8fcfe;
	text-align: center;
}

.news-container:hover .news-date {
	background-color: #18cfab;
	transition:all 0.5s;
}

.news-container:hover .news-title {
	color: #18cfab;
	transition:all 0.5s;
}

.news-btn-container {
	text-align: center;
}

.news-load-btn {
	margin-top: 40px;
	line-height: 18px;
}

.news-load-btn i {
	vertical-align: middle;
	font-size: 18px;
	margin-right: 15px;
}


/* Contact section */

.feedback-container {
	width: 100%;
	padding: 30px;
	border: 3px solid #c2c2c2;
	background-color: #ffffff;
	min-height: 500px;
}

.feedback-item {
	margin-bottom: 30px;
	position: relative;
	width: 100%;
	border: 1px solid #c2c2c2;
	border-radius: 5px;
}

.feedback-item:last-child {
	margin-bottom: 0;
}

.feedback-item-title {
	margin: 0;
	padding: 10px 15px;
	font-size: 18px;
	color: #4e4e4e;
	background-color: #f7f7f7;
}

.feedback-item-text {
	margin: 0;
	padding: 15px;
	font-size: 14px;
	font-weight: 300;
	color: #4e4e4e;
}

.feedback-item-remove {
	position: absolute;
	top: 10px;
	right: 15px;
	cursor: pointer;
}

.feedback-add-form {
	margin-top: 70px;
	margin-bottom: 100px;
}

.feedback-add-form input {
	height: 70px;
}

.feedback-add-form textarea {
	height: 120px;
}

.feedback-add-form input, .feedback-add-form textarea  {
	display: block;
	border: 1px solid #efeff1;
	margin: 10px 0;
	width: 100%;
	font-size: 24px;
	font-weight: 300;
	color: #4e4e4e;
	padding: 15px;
}

.feedback-add-btn {
	margin: 0;
	line-height: 18px;
}
/* ... */

